Changelog:

V1.19 May X 2017

	* Last slicer selected will be set as the default slicer so you dont have to keep reselecting it

V1.18 April 26 2017

	* Fixed problems related to OS not having certain environmental variables
	* Settings now have Micro 3D printer support disabled by default. If your using a Micro 3D printer then disable the Settings > M33 Fio > "Not using a Micro 3D printer" setting
	* Made slicer profile editor's settings independent of filament type used
	* Fixed compatibility with OctoPrint V1.3.2. Thanks foosel!
	* Installers work with OctoPrint V1.3.2. Tested on Windows 10, macOS Sierra, and Ubuntu 17.04
	* Fixed webcam hosting on macOS Sierra
	* OctoPrint instance manager can now create instances using provided settings
	* Upgraded backlash calibration to Muele's Quick Backlash Calibration V2. Thanks Muele!

V1.17 January 9, 2017

	* Fixed issue where positioning would be messed up when slicing multiple models
	* Fixed Windows installer

V1.16 December 27, 2016

	* Disables print cancellation dialog if corresponding setting is enabled in OctoPrint >= V1.3.1
	* Fixed macOS installer

V1.15 December 11, 2016

	* Installers work with OctoPrint >= V1.3.0
	* Fixed compatibility with OctoPrint >= V1.3.0
	* Fixed backlash calibration instructions

V1.14 December 5, 2016

	* Fixed macOS installer

V1.13 December 3, 2016

	* Fixed Safari related JavaScript issue

V1.12 December 3, 2016

	* Made model editor's raft display more efficient
	* Added more tolerance to raft's size in model editor when using Cura to make the boundary checking more accurate
	* Added vendor prefixes to CSS 3.0 properties to improve compatibility with outdated browsers
	* Fixed macOS installer when Xcode is installed
	* Fixed compatibility with OctoPrint >= V1.3.0rc2

V1.11 November 6, 2016

	* Heatbed will start heating up after moving extruder into the wipe corner
	* Text can be translated into different languages